test/classes/casts/argumentCoerce_Const/error/from-shared-Child-nilable-to-unmanaged-Parent-nilable.chpl
// AUTO-GENERATED: Do not edit
class A {}
class Parent {}
class Child : Parent {}
// coercing from shared Child? to unmanaged Parent?
proc bar(const x: unmanaged Parent?) {}
proc foo() {
  var a = new shared Child?();
  bar(a);
}
proc main() {
  foo();
}
